feat(loadtest): 添加矩阵测试功能并改进报告输出
- 为 bedside 和 nurse 场景添加 matrix 测试模式
- 实现 CSV 和 Markdown 格式的测试结果报告输出
- 重构结果数据结构以支持矩阵测试
- 更新 README 文档包含新的测试选项和使用说明
- 添加 JVM 基线配置建议和预热规范指导
- 优化数据库测试结果输出格式